# kalaikatha

./: .env.example  .firebaserc  .gitignore  AESTHETIC_IMPROVEMENTS_SUMMARY.md  CONTENT_GENERATOR_VERIFICATION_REPORT.md  FIREBASE_AUTHENTICATION_STATUS.md  FIREBASE_AUTH_SETUP.md  FIREBASE_DEPLOY.md  HACKATHON_OVERVIEW.md  NETLIFY_DEPLOY.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_PROGRESS.md  README.md  RESPONSIVE_SYSTEM_SUMMARY.md  ROADMAP.md  SECURITY.md  SECURITY_CLEARANCE_REPORT.md  TODO.md  USER_FLOW_IMPLEMENTATION_COMPLETE.md  deploy.sh  firebase.json  firestore.rules  package-lock.json  package.json  vercel.json  vite.config.ts
.firebase/: hosting.YXBwXGRpc3Q.cache
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
Kalaikatha/: README.md  index.html  package.json  vite.config.ts
Kalaikatha/src/: App.tsx  README.md  index.css
app/: .env  .env.example  README.md  complete-auth.html  eslint.config.js  firebase-auth-test.js  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
app/public/: debug.html  react-test.html  sw.js
app/src/: SimpleTest.jsx  index-minimal.css  index.css  main-backup.jsx  main.jsx  main_backup.jsx  ultra-simple-test.js
config/firebase/: .firebaserc  firebase.json
content/enhance_image/: utils.py
docs/: KALAİKATHA_KNOWLEDGE_BASE.md
docs/api/: README.md  kalaikatha-api.postman_collection.json
functions/: .env.example  .env.local  __init__.py  index.js  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test_imports.py
functions/collaboration/: collaborate.py  profile_helpers.py  schema.py
functions/commerce/calculate_shipping/: main.py
functions/commerce/get_analytics_data/: main.py
functions/commerce/process_payment/: main.py
functions/commerce/suggest_price/: main.py
functions/common/: firebase_init.py
functions/common/auth/: auth.py  pyproject.toml  requirements.txt  test_auth.py  test_imports.py
functions/common/caching/: model_cache.py
functions/common/error-handling/: __init__.py  error_wrapper.py
functions/common/error_handling/: __init__.py  error_wrapper.py
functions/common/logging/: __init__.py
functions/content/: __init__.py  pyproject.toml  test_connectivity.py  test_imports.py
functions/content/generate_content/: generate.py  main.py  requirements.txt  test_content_generator.py  test_integration.js
functions/content/generate_content_trigger/: main.py  requirements.txt
functions/content/process_image/: main.py  requirements.txt
functions/content/process_image_variants/: main.py  pyproject.toml  requirements.txt  test_imports.py
functions/functions/: main.py  pyproject.toml  requirements.txt  test_imports.py
functions/voice/: pyproject.toml  test_imports.py
functions/voice/text_to_voice/: main.py  requirements.txt  voice_output.py
functions/voice/voice_to_text/: main.py  requirements.txt  voice_input.py
src/: App.tsx  README.md  i18n.ts  index.css
src/components/: ArtisanFlow.tsx  AuthScreen.tsx  AzureTestPage.tsx  CustomerFlow.tsx  ErrorState.tsx  LanguageInstaller.tsx  LanguageSwitcher.tsx  LoadingState.tsx  OptimizedImage.tsx  OptimizedMotion.tsx  TopBar.tsx  (+1 more)
(+209 files in other folders)
