[tool.poetry]
name = "auth"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false
packages = [{include = "auth"}]

[tool.poetry.dependencies]
python = "^3.11"
firebase-admin = "6.5.0"
pytest = "8.4.2"

[tool.poetry.dev-dependencies]
pytest-mock = "3.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
